[HUBZERO][#6059][COM_PROJECTS] css fix to overlap

--- a/components/com_projects/assets/css/projects.css
+++ b/components/com_projects/assets/css/projects.css
@@ -42,7 +42,6 @@
 	}
 	#content-header-extra {
 		width: 50%;
-		z-index: 1000;
 	}
 	#content-header-extra a {
 		border: none;
